--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@ jdbc.driver=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracleThin:@localhost:152:XE
 jdbc.username=sys as sysdba
 jdbc.password=manager
+message=application.properties file read
